--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -2,13 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Methods for Adding CSS</title>
-  </head>
-  <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
-  </body>
-</html>
+
+<head>
+  <title>Three methods for CSS</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    p {
+      background-color: green;
+      color: white;
+      font-size: 18px;
+    }
+  </style>
+  <style>
+    div {
+      color: white;
+background-color: red;
+font-size: 32px;
+}
+</head>
+{
+color: white;
+font-size: 18px;
+}
+</style>
+<div><b>Style me via the external method!</b></div>
+<p> I would like to be styled with the internal method, please.</p>
+  
+  <body> 
+   <button style="background-color: orange; font-size: 18px;">Inline Method   </body>
+    </html>
+
